--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,10 +32,11 @@
                 android:theme="@style/Theme.SoundRecorder">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+		<category android:name="android.intent.category.DEFAULT" />
+		<category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter>
                  <action android:name="android.provider.MediaStore.RECORD_SOUND" />
-                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
     </application>
